# VBPR-PyTorch

./: .gitignore  README.md  dev_requirements.txt  main.py  pyproject.toml  setup.cfg  typed_requirements.txt
.github/workflows/: code-checks.yml
examples/: README.md  tradesy.py
vbpr/: __init__.py  trainer.py  vbpr.py
vbpr/datasets/: README.md  __init__.py  tradesy.py
