[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vbpr-pytorch"
version = "0.0.2"
description = "Implementation of VBPR, a visual recommender model, from the paper 'VBPR: Visual Bayesian Personalized Ranking from Implicit Feedback'"
readme = "README.md"
authors = [{ name = "Antonio Ossa-Guerra", email = "aaossa@uc.cl" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = [
    "artificial intelligence",
    "recommender systems",
    "vbpr",
]
dependencies = [
    "numpy >= 1.22.4",
    "pandas >= 1.3.5",
    "torch >= 1.13.1",
    "tqdm >= 4.64.1",
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["black", "flake8", "isort", "mypy", "pandas-stubs"]
wandb = ["wandb"]

[project.urls]
Homepage = "https://github.com/aaossa/VBPR-PyTorch"
