[tool.poetry]
name = "vbpr-pytorch"
version = "0.0.2"
description = "Implementation of VBPR, a visual recommender model, from the paper 'VBPR: Visual Bayesian Personalized Ranking from Implicit Feedback'"
authors = [
    "Antonio Ossa-Guerra <aaossa@uc.cl>",
]
license = "MIT"

readme = "README.md"

packages = [
    { include = "vbpr" },
]
include = [
    { path = "examples" },
]

homepage = "https://github.com/aaossa/VBPR-PyTorch"
repository = "https://github.com/aaossa/VBPR-PyTorch"

keywords = [
    "artificial intelligence",
    "recommender systems",
    "vbpr",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"

numpy = "^1.24.2"
pandas = "^1.5.3"
torch = "^1.13.1"
tqdm = "^4.64.1"
wandb = { version = "^0.13.10", optional = true}

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.0.1"
pandas-stubs = "^1.5.3.230214"

[tool.poetry.extras]
wandb = ["wandb"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
